# llm-learning

./: .env.sample  .gitignore  Dockerfile  README.md  config.py  main.py  pyproject.toml  requirements.txt
api/: main.py  root.py  routers.py
api/chatbot/controllers/: chatbot.py
api/chatbot/schemas/: user_question.py
apps/chatbot/: services.py
apps/chatbot/common/: constants.py  prompting_techniques.py  rag_promps.py
apps/chatbot/services/: chatbot_service.py  embedding_service.py
apps/chatbot/utils/: chatbot_tools.py
apps/utils/: prompting_techniques.py
src/: .gitignore  docker-compose.yml
src/api/: main.py  routers.py
src/api/chatbot/controllers/: chatbot.py
src/api/chatbot/schemas/: user_question.py
src/apps/chatbot/common/: prompting_techniques.py
src/apps/chatbot/services/: chatbot_service.py  embedding_service.py
src/apps/chatbot/utils/: chatbot_tools.py
src/core/common/: vector_database.py
